# My-Portfolio

./: .gitignore  about.css  about.html  contact.css  contact.html  project.css  project.html  pyproject.toml  welcome.css  welcome.html
backend/: .env.example
backend/apps/myapp/: forms.py  urls.py  views.py
backend/apps/myapp/static/myapp/css/: about.css  contact.css  projects.css  welcome.css
backend/core/: settings.py  urls.py  wsgi.py
backend/static/myapp/css/: about.css  contact.css  projects.css  welcome.css
backend/templates/apps.myapp/: about.html  base.html  contact.html  projects.html  welcome.html
templates/: about.css  about.html  anim.js  contact.css  contact.html  project.css  project.html  welcome.css
