[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Cucina <60839899+iamnovichek@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
whitenoise = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
