[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Cucina <60839899+iamnovichek@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.6"
django = "^4.2.5"
whitenoise = "^6.5.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
